# workspace-tools

./: Cargo.toml  bin.mjs  cli.mjs  index.d.ts  index.js  package.json  pnpm-lock.yaml
.github/workflows/: CI.yml
npm/darwin-arm64/: README.md  package.json
npm/darwin-universal/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: cli.rs  lib.rs
